data/derived/comb/progs/unify/prog3215.ml.out
Characters 200-204:
  let (_, res) = List.fold_left f base args in
                                  ^^^^
Error: This expression has type 'a list * int list
       but an expression was expected of type 'a list * int list list
       Type int is not compatible with type int list 
